    - debian/patches/0013_fix-non-acpi-timer-interrupt-routing.patch
  * Remove comment from README.Debian about x86-64 support not being enabled.
  * Remove unused and obsolete plex86 patch.
    - debian/patches/plex86.disabled
  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Sun, 06 Jul 2008 23:56:01 +0300

bochs (2.3.7-1) unstable; urgency=low

  * New upstream release.
    - debian/patches/00_base.patch: Refresh.
    - debian/patches/01_build.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_qemu_bios.patch: Likewise.
    - debian/patches/04_man_table.patch: Likewise.
    - debian/patches/05_bios_delay_loop.patch: Likewise.
    - debian/patches/11_ftbfs_3dnow.patch: New file. Fix FTBFS.
    - debian/patches/99_upstream_bios_update.patch: Remove, in sync with
      upstream now.

 -- Guillem Jover <guillem@debian.org>  Sat, 28 Jun 2008 03:58:49 +0300

bochs (2.3.6-5) unstable; urgency=low

  * Update packaging Vcs fields to the new URL.
  * Add a debian/README.source file (and move information about how to
    create the stripped tarballs from README.Debian).
  * Now using Standards-Version 3.8.0.
  * Cleanup debian/copyright:
    - Change 'Copyright' to 'Copyright Holders'.
    - Use UTF-8 copyright symbol.
    - Remove packaging svn information.
  * Remove perl from Build-Depends-Indep, it's Build-Essential.

 -- Guillem Jover <guillem@debian.org>  Sun, 22 Jun 2008 09:52:32 +0300

bochs (2.3.6-4) unstable; urgency=low

  * Update bochsbios from uptream CVS:
    - Adds SMBIOS and DMI information. (Closes: #400902)
    - Adds support for LBA32 and LBA48. (Closes: #471395)
    - debian/patches/03_qemu_bios.patch: Remove hunk already in upstream.
    - debian/patches/99_upstream_bios_update.patch: New file.
  * Ship compressed man pages, just by rebuilding with a fixed debhelper.
    (Closes: #472932)